[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/actors/Actors.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/weapons/projectile/gun/Gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/actors/Player/PlayerController.gd" type="Script" id=3]
[ext_resource path="res://scene/scripts/Pviot.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[node name="Player" instance=ExtResource( 1 )]
scale = Vector2( 0.926344, 0.958756 )
script = ExtResource( 3 )
speed = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationTree" parent="." index="3"]
parameters/playback = SubResource( 2 )
parameters/Idle/blend_position = Vector2( 0, 0 )

[node name="WeaponPviot" type="Position2D" parent="." index="4"]
position = Vector2( 2.72023, 11.8271 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Weapon" parent="WeaponPviot" index="0" instance=ExtResource( 2 )]
position = Vector2( 11.8942, -2.27482 )
attackTime = 2.0
[connection signal="direction_changed" from="." to="WeaponPviot" method="updatePosition"]
